@@ -1,3 +1,6 @@
+[B]0.9.2[/B]
+- Converted code to python 3
+
 [B]0.9.1[/B]
 - Added ConditionsxxxFull parameters to be able to shade fully or have 2 different shade thresholds 
 
